--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,9 +1,7 @@
 {
 	"name": "flutter",
-	"dockerFile": "Dockerfile",
-	"containerUser": "developer",
+	"image": "flutter_docker",
 	"extensions": [
-		"dart-code.dart-code",
 		"dart-code.flutter"
 	],
 	"runArgs": [
